--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,9 @@
 
 <head>
     <meta name="viewport" content="initial-scale=1"/>
-    <link rel="stylesheet" href="../node_modules/angular-material/angular-material.min.css">
-    
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-	<script src="/js/lib/jquery.widget.min.js"></script>
-	<script src="/js/lib/jquery.mousewheel.js"></script>
-	<script src="/js/lib/hammerjs/hammer.js"></script>
-	<link rel="stylesheet" href="/js/lib/jquery-ui.css">
-	<script src="/js/lib/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="/bower_components/angular-material/angular-material.min.css">
+
+    <script src="/js/lib/jquery.js"></script>
 	<script src="/bower_components/moment/min/moment-with-locales.min.js"></script>
 
     <link rel="stylesheet" href="./css/style.css">
@@ -23,7 +18,7 @@
             <md-icon aria-label="Menu">
             </md-icon>
         </md-button>
-        <h1>Angular Material: &nbsp; Starter CodePen </h1>
+        <h1>Feed.me</h1>
     </div>
 </md-toolbar>
 <div layout="row" flex>
@@ -44,18 +39,16 @@
 
 <script src="/bower_components/angular/angular.js"></script>
 <script src="/bower_components/angular-cookies/angular-cookies.min.js"></script>
-<script src="/bower_components/angular-material/angular-material.min.js"></script>
 
 <script src="/bower_components/angular-aria/angular-aria.js"></script>
 <script src="/bower_components/angular-animate/angular-animate.js"></script>
-<script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+<script src="/bower_components/angular-material/angular-material.min.js"></script>
 
 <script src="/bower_components/angular-route/angular-route.js"></script>
 <script src="/bower_components/angular-resource/angular-resource.js"></script>
-<script src="/bower_components/angular-google-client/dist/angular-google-client.min.js"></script>
+
 <script src="/bower_components/satellizer/satellizer.min.js"></script>
 <script src="/bower_components/ngstorage/ngStorage.js"></script>
-
 <script src="/js/app.js"></script>
 
 </body>
