--- a/public/main.html
+++ b/public/main.html
@@ -9,18 +9,23 @@
 
 <md-content layout="column" flex class="md-padding">
 
-	<div ng-controller="AppCtrl" ng-cloak>
+	<div ng-cloak>
 		<md-content>
 			<md-list>
 				<md-subheader class="md-no-sticky">Feeders list</md-subheader>
-				<md-list-item class="md-3-line md-long-text" ng-repeat="provider in providers">
-					<img ng-src="{{provider.image}}" class="md-avatar" alt="{{provider.name}}"/>
+				<md-list-item class="md-3-line md-long-text" ng-repeat="deal in deals">
+					<img ng-src="{{deal.image}}" class="md-avatar" alt="{{deal.title}}"/>
 
+					<div>{{deal}}</div>
+					
+					<!--
 					<div class="md-list-item-text">
 						<h3>{{ provider.name }}</h3>
 
 						<p>{{ provider.description }}</p>
 					</div>
+					-->
+					
 				</md-list-item>
 			</md-list>
 		</md-content>
