--- a/public/main.html
+++ b/public/main.html
@@ -15,7 +15,7 @@
 				<md-subheader class="md-no-sticky">Feeders list</md-subheader>
 				<md-list-item class="md-3-line md-long-text" ng-repeat="deal in deals" layout="column">
 					<div>
-						<md-button class="md-raised">Open modal</md-button>
+						<md-button class="md-raised" ng-click="openDealModal(deal.id)">Open modal</md-button>
 					</div>
 					
 					<img ng-src="{{deal.image}}" class="md-avatar" alt="{{deal.title}}"/>
