Added google maps api

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/bower_components/angular-material/angular-material.min.css">
 
     <script src="/js/lib/jquery.js"></script>
-	<script src="/bower_components/moment/min/moment-with-locales.min.js"></script>
+    <script src="/bower_components/moment/min/moment-with-locales.min.js"></script>
 
     <link rel="stylesheet" href="./css/style.css">
 
@@ -32,22 +32,26 @@
             <div ng-view autoscroll class="view-frame" style="padding: 0 10px;"></div>
         </div>
     </div>
-<!-- Angular Material Dependencies -->
-<script src="/js/lib/require.js"></script>
+    <!-- Angular Material Dependencies -->
+    <script src="/js/lib/require.js"></script>
 
-<script src="/bower_components/angular/angular.js"></script>
-<script src="/bower_components/angular-cookies/angular-cookies.min.js"></script>
+    <script src='/bower_components/lodash/lodash.min.js'></script>
 
-<script src="/bower_components/angular-aria/angular-aria.js"></script>
-<script src="/bower_components/angular-animate/angular-animate.js"></script>
-<script src="/bower_components/angular-material/angular-material.min.js"></script>
+    <script src="/bower_components/angular/angular.js"></script>
+    <script src='/bower_components/angular-simple-logger/dist/angular-simple-logger.min.js'></script>
+    <script src='/bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
+    <script src="/bower_components/angular-cookies/angular-cookies.min.js"></script>
 
-<script src="/bower_components/angular-route/angular-route.js"></script>
-<script src="/bower_components/angular-resource/angular-resource.js"></script>
+    <script src="/bower_components/angular-aria/angular-aria.js"></script>
+    <script src="/bower_components/angular-animate/angular-animate.js"></script>
+    <script src="/bower_components/angular-material/angular-material.min.js"></script>
 
-<script src="/bower_components/satellizer/satellizer.min.js"></script>
-<script src="/bower_components/ngstorage/ngStorage.js"></script>
-<script src="/js/app.js"></script>
+    <script src="/bower_components/angular-route/angular-route.js"></script>
+    <script src="/bower_components/angular-resource/angular-resource.js"></script>
+
+    <script src="/bower_components/satellizer/satellizer.min.js"></script>
+    <script src="/bower_components/ngstorage/ngStorage.js"></script>
+    <script src="/js/app.js"></script>
 
 </body>
 
