--- a/public/deal-modal.html
+++ b/public/deal-modal.html
@@ -1,7 +1,6 @@
 <style>
 	.deal {
-		background: url('/img/falafel.jpg') 0 0;
-		min-width: 100%;
+		background: url('/img/falafel.jpg') center center;
 		min-height: 150px;
 		background-size: cover;
 		border-radius: 6px;
