--- a/public/main.html
+++ b/public/main.html
@@ -47,6 +47,8 @@
 						>
 				</ui-gmap-marker>
 
+				<ui-gmap-markers models="dealMarkers" coords="'self'" icon="'icon'">
+				</ui-gmap-markers>
 			</ui-gmap-google-map>
 		</md-content>
 	</div>
