--- a/public/index.html
+++ b/public/index.html
@@ -19,19 +19,10 @@
 <body layout="column" ng-controller="AppController as vm">
 <md-toolbar layout="row">
     <div class="md-toolbar-tools">
-        <md-button ng-click="vm.toggleSidenav('left')" hide-gt-sm class="md-icon-button">
-            <md-icon aria-label="Menu">
-            </md-icon>
-        </md-button>
-        <h1>Feed.me</h1>
+        <h1 class="logo">Feed.me</h1>
     </div>
 </md-toolbar>
 <div layout="row" flex>
-    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-4dp" md-component-id="left"
-                md-is-locked-open="$mdMedia('gt-sm')">
-        <md-button class="md-accent">Button 1</md-button>
-        <md-button class="md-accent">Button 2</md-button>
-    </md-sidenav>
     <div layout="column" flex id="content" class="container">
         <div class="view-container">
             <div ng-view autoscroll class="view-frame" style="padding: 0 10px;"></div>
