--- a/public/main.html
+++ b/public/main.html
@@ -14,7 +14,7 @@
                                 >
                         </ui-gmap-marker>
                         -->
-                        <ui-gmap-markers models="dealMarkers" coords="'self'" icon="'icon'" click="openDealModal('564e193fabfdaf680ce050c1')"></ui-gmap-markers>
+                        <ui-gmap-markers models="dealMarkers" coords="'self'" icon="'icon'" click="openDealModal(id)"></ui-gmap-markers>
                     </ui-gmap-google-map>
                 </md-content>
             </div>
@@ -25,19 +25,18 @@
                     <md-list>
                         <md-list-item class="md-3-line md-long-text" ng-repeat="deal in deals" style="position: relative;">
                             <div class="md-list-item-text" style="padding-left: 100px; padding-right: 100px;">
-                                <md-button class="md-raised md-primary" ng-click="openDealModal(deal.id)" style="position: absolute; bottom: 10px; right: 10px;">Feed me!</md-button>
+                                <md-button class="md-raised md-primary" style="position: absolute; bottom: 10px; right: 10px;">Feed me!</md-button>
 
                                 <img ng-src="{{deal.image}}" class="md-avatar" alt="{{deal.title}}" width="90" style="border-radius: 3px; float: left; margin-left: -100px;">
                                 <h3>{{ deal.title }}</h3>
                                 <h4>{{ deal.description }}</h4>
 
-                                <p>{{ deal.location }}</p>
+                                <p>{{ deal.address }}</p>
 
                                 <p>Price: {{ deal.price}} You save:{{deal.discount}}!</p>
 
-                                <p> {{deal.quantity}} available</p>
-
-                                <p><img ng-src="./img/user.png" width="10px" height="10px"/> {{ deal.subscribers.length }}
+                                <p><img ng-src="./img/user.png" width="10px" height="10px"/> {{ deal.interested }} / {{
+                                    deal.quantity }}
                                     interested</p>
                             </div>
                             <md-divider></md-divider>
