--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,21 @@
 
     <script src="/js/lib/jquery.js"></script>
 	<script src="/bower_components/moment/min/moment-with-locales.min.js"></script>
-    
-    <link rel="stylesheet" href="/css/metro/css/iconFont.min.css">
-	<link rel="stylesheet" href="/css/metro/css/metro.css">
-	<link rel="stylesheet" href="/css/metro/css/metro-rtl.css">
-	<link rel="stylesheet" href="/css/metro/css/metro-responsive.css">
-	<link rel="stylesheet" href="/css/metro/css/metro-icons.css">
-
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body layout="column" ng-controller="AppController as vm">
-<md-toolbar layout="row">
-    <div class="md-toolbar-tools">
-        <h1 class="logo">Feed.me</h1>
-    </div>
-</md-toolbar>
+    <md-toolbar>
+      <div class="md-toolbar-tools">
+        <h2>
+          <span>FeedMe</span>
+        </h2>
+        <span flex></span>
+        <md-button class="md-raised" ng-href="/#/add" aria-label="Learn More">
+          ADD
+        </md-button>
+      </div>
+    </md-toolbar>
 <div layout="row" flex>
     <div layout="column" flex id="content" class="container">
         <div class="view-container">
@@ -45,8 +44,6 @@
     <script src="/bower_components/angular-route/angular-route.js"></script>
     <script src="/bower_components/angular-resource/angular-resource.js"></script>
 
-    <script src="/bower_components/satellizer/satellizer.min.js"></script>
-    <script src="/bower_components/ngstorage/ngStorage.js"></script>
     <script src="/js/app.js"></script>
 
 </body>
