--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
 <body layout="column" ng-controller="AppController as vm">
     <md-toolbar>
       <div class="md-toolbar-tools">
-        <h2>
-          <span>FeedMe</span>
-        </h2>
+        <h1 class="logo">
+          FeedMe
+        </h1>
         <span flex></span>
         <md-button class="md-raised" ng-href="/#/add" aria-label="Learn More">
           ADD
