Removed consts in google maps icons

--- a/public/deal-modal.html
+++ b/public/deal-modal.html
@@ -1,6 +1,6 @@
 <style>
 	.deal {
-		background: url('/img/falafel.jpg') center center;
+		background: url({{ deal.image }} ) center center;
 		min-height: 150px;
 		background-size: cover;
 		border-radius: 6px;
