--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 <div layout="row" flex>
     <div layout="column" flex id="content" class="container">
         <div class="view-container">
-            <div ng-view autoscroll class="view-frame" style="padding: 0 10px;"></div>
+            <div ng-view autoscroll class="view-frame"></div>
         </div>
     </div>
     <!-- Angular Material Dependencies -->
