Change my marker icon

--- a/public/main.html
+++ b/public/main.html
@@ -30,7 +30,7 @@
                                 idKey='selfMarker.id'
                                 coords='selfMarker.coords'
                                 click=''
-                                options=''
+                                options='selfMarker.options'
                                 events=''
                                 control=''
                                 >
