--- a/public/deal-modal.html
+++ b/public/deal-modal.html
@@ -40,7 +40,7 @@
 			</md-dialog-content>
 			<md-toolbar>
 				<div class="md-toolbar-tools">
-					<h2>Deal Details:</h2>
+					<h2>Deal Details</h2>
 					<span flex></span>
 					<md-button class="md-icon-button" ng-click="cancel()">
 						<md-icon style="font-size: 25px; margin-top: -27px;">&times;</md-icon>
