Add navigation modal

--- a/public/deal-modal.html
+++ b/public/deal-modal.html
@@ -35,8 +35,10 @@
 				</div>
 				
 				<br/>
-				<md-button class="md-primary md-raised padding5">Feed me!</md-button>
-				
+				<br/>
+				<center>
+				<md-button class="md-primary md-raised padding5" ng-click="feedMe(deal)">Feed me!</md-button>
+				</center>
 			</md-dialog-content>
 			<md-toolbar>
 				<div class="md-toolbar-tools">
