--- a/public/main.html
+++ b/public/main.html
@@ -77,7 +77,7 @@
                                 <md-button class="md-raised md-primary" style="position: absolute; bottom: 10px; right: 10px;">Feed me!</md-button>
                                 <div style="position: absolute; top: 10px; right: 15px;" ng-click="deleteDeal(deal)">.</div>
 
-                                <img ng-src="{{deal.image}}" class="md-avatar" alt="{{deal.title}}" width="90" style="border-radius: 3px; float: left; margin-left: -100px;">
+                                <img ng-src="{{deal.image}}" class="md-avatar" ng-click="feedMe(deal)" alt="{{deal.title}}" width="90" style="border-radius: 3px; float: left; margin-left: -100px;">
                                 <h3>{{ deal.title }}</h3>
                                 <h4>{{ deal.description }}</h4>
 
