--- a/public/feedme-modal.html
+++ b/public/feedme-modal.html
@@ -8,7 +8,7 @@
 				<br/>
 				<br/>
 				<center>
-				<md-button class="md-primary md-raised padding" align="center" ng-click="feedMe(deal)">Navigate to Restaurant</md-button>
+				<md-button class="md-primary md-raised padding" align="center" ng-click="navigate(deal)">Navigate to Restaurant</md-button>
 				</center>
 			</md-dialog-content>
 			<md-toolbar>
