--- a/public/main.html
+++ b/public/main.html
@@ -74,7 +74,7 @@
                     <md-list>
                         <md-list-item class="md-3-line md-long-text" ng-repeat="deal in deals" style="position: relative;">
                             <div class="md-list-item-text" style="padding-left: 100px; padding-right: 100px;">
-                                <md-button class="md-raised md-primary" style="position: absolute; bottom: 10px; right: 10px;">Feed me!</md-button>
+                                <md-button class="md-raised md-primary" style="position: absolute; bottom: 10px; right: 10px;" ng-click="feedMe(deal)">Feed me!</md-button>
                                 <div style="position: absolute; top: 10px; right: 15px;" ng-click="deleteDeal(deal)">.</div>
 
                                 <img ng-src="{{deal.image}}" class="md-avatar" ng-click="feedMe(deal)" alt="{{deal.title}}" width="90" style="border-radius: 3px; float: left; margin-left: -100px;">
