Walk me integration

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
 	<link rel="stylesheet" href="/css/metro/css/metro-icons.css">
     
     <link rel="stylesheet" href="./css/style.css">
+    
+    <script type="text/javascript">(function() {var walkme = document.createElement('script'); walkme.type = 'text/javascript'; walkme.async = true; walkme.src = 'http://cdn.walkme.com/users/891ac6ea3a3d460c93669a3410020170/walkme_891ac6ea3a3d460c93669a3410020170.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(walkme, s); window._walkmeConfig = {smartLoad:true}; })();</script>
 </head>
 
 <body layout="column" ng-controller="AppController as vm">
