--- a/public/deal-modal.html
+++ b/public/deal-modal.html
@@ -30,7 +30,7 @@
 					</div>
 				</div>
 				<div layout="row" layout-align="space-between end" style="padding: 10px;">
-					<div class="deal-address"><span class="icon-location"></span> {{ deal.address }} </div>
+					<div class="deal-address"><span class="icon-location"></span> {{ deal.address }} ({{deal.when}})</div>
 					<div class="deal-slots"><span class="icon-user"></span> {{ deal.interested }} / {{ deal.quantity }} </div>
 				</div>
 				
